2004-04-22  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in: Allow -Wx,option style options to be passed to the
	compiler.  From Al Niessner <Al.Niessner@jpl.nasa.gov>.

2004-04-06  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Delete code for --with-ieee754.
	Use OCTAVE_IEEE754_DATA_FORMAT.

	* aclocal.m4 (OCTAVE_IEEE754_DATA_FORMAT): New macro, based on
	configure.in code for HAVE_IEEE754_COMPLIANCE.

2004-04-06  David Bateman  <dbateman@free.fr>

  	* configure.in : add the option --with-ieee754 and use it to define
	HAVE_IEEE754_COMPLIANCE

2004-04-02  David Bateman  <dbateman@free.fr>

	* configure.in: Warn about g++ 2.9x versions.

2004-04-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (dist): Also make bz2 file and compute md5
	checksums of both gz and bz2 files.

2004-03-04  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: No longer accept --with-g77 (it is still possible
	to use --with-f77=g77).

2004-03-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Check for -mieee instead of -mieee-with-inexact.

2004-02-20  Per Persson  <persquare@mac.com>

	* mkoctfile.in (LINK_DEPS): Include $LDFLAGS in the list.

2004-02-18  Per Persson  <persquare@mac.com>

	* configure.in (*-*-darwin*): Define SONAME_FLAGS.

2004-02-16  David Bateman  <dbateman@free.fr>

	* configure.in: Test for the presence of FFTW 3.x and use it in
	preference to FFTW 2.x.  Define HAVE_FFTW3

2004-02-16  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mkoctfile.in (LINK_DEPS): Include $LIBS and $RLD_FLAG.
	Use $OCTAVE_LIBS instead of listing libs individually.

2004-02-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mkoctfile.in: Delete INCLUDE_LINK_DEPS.  Fix help text.
	Always define LINK_DEPS.
	(LINK_DEPS): Also include FLIBS in the list.

	* Makeconf.in (INCLUDE_LINK_DEPS): Don't substitute.
	(do-subst-config-vals): Delete INCLUDE_LINK_DEPS.
	* configure.in (INCLUDE_LINK_DEPS): Delete.

	* mkoctfile (SH_LD, SH_LDFLAGS): Delete.